--- a/vara-tjanster/index.html
+++ b/vara-tjanster/index.html
@@ -463,11 +463,11 @@
                   <section id="services">
                      <div class="wrapper__main_inner-sc-d7vgux-0 Servicesstyle__MainInner-sc-jlqcj3-0 fhPlTV">
                         <div class="Servicesstyle__Content-sc-jlqcj3-1 iXGOSI">
-                           <a href="vara-tjanster/webbutveckling/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="../vara-tjanster/webbutveckling/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Webbutveckling</h3>
                                  <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi utmärker oss inom skapandet av både inspirerande webbplatser och sofistikerade e-handelsplattformar med riktigt bra design. Vi tar ansvaret för projekt av alla storlekar och komplexitetsgrader och som en dedikerad techbyrå har vi kapaciteten att lösa även de mest tekniskt utmanande uppgifterna.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="../webbutveckling/index.html">UPPTÄCK MER!</div>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="../vara-tjanster/webbutveckling/index.html">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
@@ -487,11 +487,11 @@
                                  </div>
                               </div>
                            </a>
-                           <a href="vara-tjanster/apputveckling/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="../vara-tjanster/apputveckling/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Apputveckling</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi utvecklar både native appar (för iOS och Android), webbappar (PWA) och hybridappar. Vi hjälper dig att hitta rätt väg för att nå dina mål och samtidigt uppfylla dina användares behov.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">Berätta mer!</div>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi specialiserar oss på att skapa unika mobilapplikationer, inklusive native appar för både iOS och Android, webbaserade appar (PWA) och hybridapplikationer. Vår expertis ligger i att guida dig genom den optimala vägen för att uppnå dina mål och samtidigt tillgodose dina användares specifika krav och önskemål.</p>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="/vara-tjanster/apputveckling/index.html" >UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
@@ -511,11 +511,11 @@
                                  </div>
                               </div>
                            </a>
-                           <a href="vara-tjanster/automatisering-integrationer/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="../vara-tjanster/automatisering-integrationer/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
-                                 <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Automatisering &amp; integrationer</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">En viktig del i en lyckad techprodukt är hur den fungerar bakom kulisserna. Genom att digitalisera och automatisera processer underlättar vi både för dig och dina kunder. Vi hjälper dig med API-kopplingar eller att implementera tjänster som Swish och BankID.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">berätta mer!</div>
+                                 <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Automatisering, Integrering & AI</h3>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">En väsentlig komponent för en framgångsrik teknikprodukt är dess bakomliggande funktionalitet. Genom att digitalisera och automatisera processer strävar vi efter att skapa en smidig upplevelse både för dig och dina kunder. En genomtänkt arkitektur, som smidigt integrerar dina olika affärssystem, utgör en kritisk framgångsfaktor för din nyskapade produkt.  </p>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="/vara-tjanster/automatisering-integrationer/index.html">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
@@ -535,16 +535,16 @@
                                  </div>
                               </div>
                            </a>
-                           <a href="vara-tjanster/ui-ux-design/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="../vara-tjanster/ui-ux-design/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
-                                 <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">UX/UI-design</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Bakom bra tech ligger riktigt bra design. Våra designers är specialiserade på digital design. Vi vet vad som förväntas av användarna och ser till att din produkt lever upp till det, både när det kommer till funktion, färg och form.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">Berätta mer!</div>
+                                 <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Cybersäkerhet</h3>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Inom cybersäkerhet fokuserar vi på att skapa starka och pålitliga lösningar för att skydda digitala system och data från hot och attacker. Genom avancerade säkerhetsprotokoll och sårbarhetsanalyser strävar vi efter att säkerställa en trygg digital miljö. Vårt mål är att utveckla och implementera skräddarsydda cybersäkerhetsåtgärder som effektivt förebygger, upptäcker och hanterar olika cyberhot, säkerställande en trygg och förtroendefull verksamhetsdrift.</p>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="/ui-ux-design/index.html">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
                                     <div style="max-width:500px;display:block"><img alt="" role="presentation" aria-hidden="true" src="data:image/svg+xml;charset=utf-8,%3Csvg height=&#x27;663&#x27; width=&#x27;500&#x27; xmlns=&#x27;http://www.w3.org/2000/svg&#x27; version=&#x27;1.1&#x27;%3E%3C/svg%3E" style="max-width:100%;display:block;position:static"/></div>
-                                    <img aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear" decoding="async" src="/Images/ui-ux.avif" alt=""/>
+                                    <img aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear" decoding="async" src="/Images/cyber.jpg" alt=""/>
                                     <picture>
                                        <source type="image/webp" data-srcset="/static/0e956227a346e11d2b227773e889e672/cc168/design-e1685343074451.webp 125w,/static/0e956227a346e11d2b227773e889e672/2c865/design-e1685343074451.webp 250w,/static/0e956227a346e11d2b227773e889e672/be4dc/design-e1685343074451.webp 500w,/static/0e956227a346e11d2b227773e889e672/7adf9/design-e1685343074451.webp 1000w" sizes="(min-width: 500px) 500px, 100vw"/>
                                        <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="(min-width: 500px) 500px, 100vw" decoding="async" loading="lazy" data-src="/static/0e956227a346e11d2b227773e889e672/b0b3b/design-e1685343074451.jpg" data-srcset="/static/0e956227a346e11d2b227773e889e672/3c206/design-e1685343074451.jpg 125w,/static/0e956227a346e11d2b227773e889e672/f4270/design-e1685343074451.jpg 250w,/static/0e956227a346e11d2b227773e889e672/b0b3b/design-e1685343074451.jpg 500w,/static/0e956227a346e11d2b227773e889e672/74b30/design-e1685343074451.jpg 1000w" alt=""/>
