--- a/vara-tjanster/automatisering-integrationer/index.html
+++ b/vara-tjanster/automatisering-integrationer/index.html
@@ -423,7 +423,7 @@
       <div id="___gatsby">
          <div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper">
             <aside class="Sidebarstyle__Sidebar-sc-15kdzzt-0 cEABF">
-               <p class="text__detail_text-sc-1xracbr-11 Sidebarstyle__Title-sc-15kdzzt-1 gyZFdf kBomLS">Automatisering, integrationer & AI lösningar</p>
+               <p class="text__detail_text-sc-1xracbr-11 Sidebarstyle__Title-sc-15kdzzt-1 gyZFdf kBomLS">Automatisering, Integrering & AI</p>
             </aside>
             <div class="Bodystyle__Body-sc-15846tj-0 kAxvFw">
                <div class="Headerstyle__Header-sc-11sf5xg-0 gzTbnY">
@@ -540,8 +540,8 @@
                      <div class="wrapper__main_inner-sc-d7vgux-0 IconHerostyle__MainInner-sc-t3oyw9-0 fhPlTV jyGUD">
                         <div class="IconHerostyle__Container-sc-t3oyw9-1 gsAtLp">
                            <div class="IconHerostyle__TextContentBig-sc-t3oyw9-6 gjPgQL">
-                              <h1 class="text__heading_xxl-sc-1xracbr-1 IconHerostyle__Header-sc-t3oyw9-7 gGrZqD">Automatisering, integrationer & AI lösningar</h1>
-                              <p class="text__paragraph_big-sc-1xracbr-8 IconHerostyle__Paragraph-sc-t3oyw9-8 JNKLB">AI erbjuder en unik möjlighet att effektivisera verksamheten genom att analysera stora datamängder och dra värdefulla insikter. Genom att implementera AI-drivna system inom områden som kundrelationer, ekonomi och logistik kan du optimera arbetsflöden och fatta datadrivna beslut för att uppnå ökad effektivitet.</p>
+                              <h1 class="text__heading_xxl-sc-1xracbr-1 IconHerostyle__Header-sc-t3oyw9-7 gGrZqD">Automatisering, Integrering & AI</h1>
+                              <p class="text__paragraph_big-sc-1xracbr-8 IconHerostyle__Paragraph-sc-t3oyw9-8 JNKLB">En väsentlig komponent för en framgångsrik teknikprodukt är dess bakomliggande funktionalitet. Genom att digitalisera och automatisera processer strävar vi efter att skapa en smidig upplevelse både för dig och dina kunder. En genomtänkt arkitektur, som smidigt integrerar dina olika affärssystem, utgör en kritisk framgångsfaktor för din nyskapade produkt.  </p>
                               <div class="SideContactFormstyled__Container-sc-xpl7fe-0 iPuiUE">
                                  <div color="purpleOn#0C3A53;" class="SideContactFormstyled__Button-sc-xpl7fe-1 czEjVU">
                                     MÖTESBOKNING
