--- a/vara-tjanster/ui-ux-design/index.html
+++ b/vara-tjanster/ui-ux-design/index.html
@@ -691,7 +691,7 @@
                               </div>
                            </a>
                            <a href="../../cases/foda-utan-radsla/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/ui-ux.avif" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/travel.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
