--- a/vara-tjanster/apputveckling/index.html
+++ b/vara-tjanster/apputveckling/index.html
@@ -646,7 +646,7 @@
                            </p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
                            <a href="../../cases/bonliva-care/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/app-one.avif" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/hotel.png" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
@@ -678,7 +678,7 @@
                               </div>
                            </a>
                            <a href="../../cases/foda-utan-radsla/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/app-two.avif" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/travel.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
@@ -701,7 +701,7 @@
                               </div>
                            </a>
                            <a href="../../cases/24-duty/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/app-three.avif" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/flowe.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
