--- a/vara-tjanster/cyber-security/index.html
+++ b/vara-tjanster/cyber-security/index.html
@@ -513,10 +513,10 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="../apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="../webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="../automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="../index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="../starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
-                           <a href="../../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="../../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
+                           <a href="../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
                            <div class="SideContactFormstyled__Container-sc-xpl7fe-0 gNFoLC">
                               <div color="#0C3A53;Default" class="SideContactFormstyled__Button-sc-xpl7fe-1 jbaOBC">
                                  Boka introduktionsmöte<!-- --> 
@@ -545,13 +545,12 @@
                                         <p class="text__paragraph_small-sc-1xracbr-9 SideContactFormstyled__InputLabel-sc-xpl7fe-22 ksIOdr iYTukQ">
                                             <div class="SideContactFormstyled__CheckBoxWrapper-sc-xpl7fe-23 kQWdyq">
                                                 <input type="checkbox" class="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24 gLyNAr" id="agree"/>Jag godkänner villkoren i pasver:s
-                                                <a href="privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
+                                                <a href="../../privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
                                             </div>
                                         </p>
                                         <button class="SideContactFormstyled__SubmitButton-sc-xpl7fe-26 caFxEC" onclick="submitForm()">Skicka</button>
                                     </div>
                                 </div>
-                                 </div>
                               </div>
                               <div class="SideContactFormstyled__ContactContainer-sc-xpl7fe-10 jQETUf">
                                  <div class="SideContactFormstyled__ContactWrapper-sc-xpl7fe-11 cqWxmg">
@@ -972,6 +971,6 @@
          </div>
          <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div>
       </div>
-      <script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/vara-tjanster/ui-ux-design/";window.___webpackCompilationHash="6eca5ca3beedc7450e8c";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-752e2013a31fa14e7eac.js"],"app":["/app-40c35b496b3ab4a12bd3.js"],"gatsby-plugin-image":["/gatsby-plugin-image-e0257f4cbe694c90b7ba.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx-94cf5e3edf63eec8bb55.js"],"component---src-templates-news-tsx":["/component---src-templates-news-tsx-86f9f5d83b324bc34c0e.js"],"component---src-templates-page-tsx":["/component---src-templates-page-tsx-2f281419ac9369c01938.js"]};/*]]>*/</script><script src="../../polyfill-752e2013a31fa14e7eac.js" nomodule=""></script><script src="../../app-40c35b496b3ab4a12bd3.js" async=""></script><script src="../../dc6a8720040df98778fe970bf6c000a41750d3ae-a3cb1a49be3896b12e36.js" async=""></script><script src="../../framework-ab0eeed1aa5464a561cf.js" async=""></script><script src="../../webpack-runtime-710d81178e1f209a136c.js" async=""></script>
+      <script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/vara-tjanster/cyber-security/";window.___webpackCompilationHash="6eca5ca3beedc7450e8c";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-752e2013a31fa14e7eac.js"],"app":["/app-40c35b496b3ab4a12bd3.js"],"gatsby-plugin-image":["/gatsby-plugin-image-e0257f4cbe694c90b7ba.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx-94cf5e3edf63eec8bb55.js"],"component---src-templates-news-tsx":["/component---src-templates-news-tsx-86f9f5d83b324bc34c0e.js"],"component---src-templates-page-tsx":["/component---src-templates-page-tsx-2f281419ac9369c01938.js"]};/*]]>*/</script><script src="../../polyfill-752e2013a31fa14e7eac.js" nomodule=""></script><script src="../../app-40c35b496b3ab4a12bd3.js" async=""></script><script src="../../dc6a8720040df98778fe970bf6c000a41750d3ae-a3cb1a49be3896b12e36.js" async=""></script><script src="../../framework-ab0eeed1aa5464a561cf.js" async=""></script><script src="../../webpack-runtime-710d81178e1f209a136c.js" async=""></script>
    </body>
 </html>
