--- a/vara-tjanster/index.html
+++ b/vara-tjanster/index.html
@@ -399,7 +399,7 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="ui-ux-design/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
                               <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
                            <a href="../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
@@ -431,7 +431,7 @@
                                         <p class="text__paragraph_small-sc-1xracbr-9 SideContactFormstyled__InputLabel-sc-xpl7fe-22 ksIOdr iYTukQ">
                                             <div class="SideContactFormstyled__CheckBoxWrapper-sc-xpl7fe-23 kQWdyq">
                                                 <input type="checkbox" class="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24 gLyNAr" id="agree"/>Jag godkänner villkoren i pasver:s
-                                                <a href="privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
+                                                <a href="../../privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
                                             </div>
                                         </p>
                                         <button class="SideContactFormstyled__SubmitButton-sc-xpl7fe-26 caFxEC" onclick="submitForm()">Skicka</button>
@@ -535,11 +535,11 @@
                                  </div>
                               </div>
                            </a>
-                           <a href="../vara-tjanster/ui-ux-design/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
+                           <a href="../vara-tjanster/cyber-security/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Cybersäkerhet</h3>
                                  <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Inom cybersäkerhet fokuserar vi på att skapa starka och pålitliga lösningar för att skydda digitala system och data från hot och attacker. Genom avancerade säkerhetsprotokoll och sårbarhetsanalyser strävar vi efter att säkerställa en trygg digital miljö. Vårt mål är att utveckla och implementera skräddarsydda cybersäkerhetsåtgärder som effektivt förebygger, upptäcker och hanterar olika cyberhot, säkerställande en trygg och förtroendefull verksamhetsdrift.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="/ui-ux-design/index.html">UPPTÄCK MER!</div>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="/cyber-security/index.html">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
@@ -616,7 +616,7 @@
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering och integrationer</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="ui-ux-design/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">UX/UI-design</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="cyber-security/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">UX/UI-design</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
