--- a/vara-tjanster/starta-ett-projekt/index.html
+++ b/vara-tjanster/starta-ett-projekt/index.html
@@ -496,7 +496,7 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="../apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="../webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="../automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="../ui-ux-design/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="../apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="../webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="../automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="../cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">UX/UI-design</a></div>
                               <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="../index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
                            <a href="../../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="../../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
@@ -528,7 +528,7 @@
                                         <p class="text__paragraph_small-sc-1xracbr-9 SideContactFormstyled__InputLabel-sc-xpl7fe-22 ksIOdr iYTukQ">
                                             <div class="SideContactFormstyled__CheckBoxWrapper-sc-xpl7fe-23 kQWdyq">
                                                 <input type="checkbox" class="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24 gLyNAr" id="agree"/>Jag godkänner villkoren i pasver:s
-                                                <a href="privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
+                                                <a href="../../privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
                                             </div>
                                         </p>
                                         <button class="SideContactFormstyled__SubmitButton-sc-xpl7fe-26 caFxEC" onclick="submitForm()">Skicka</button>
@@ -579,7 +579,7 @@
                            <div class="TextColumnsWithIconsstyle__Block-sc-10zxm2u-4 cHHowN">
                               <h3 class="text__heading_lg-sc-1xracbr-3 TextColumnsWithIconsstyle__Subheader-sc-10zxm2u-5 bMjjZJ">UI/UX-design</h3>
                               <p class="text__paragraph-sc-1xracbr-7 TextColumnsWithIconsstyle__Paragraph-sc-10zxm2u-6 kITvjv kdJqcs">Bra tech är snygg tech brukar vi säga. På qte har vi duktiga designers som ser till att din nya produkt är genomtänkt, välfungerande och ser riktigt bra ut.</p>
-                              <a href="../ui-ux-design/index.html" target="" class="button__btn_large-sc-i59f7s-0 button__btn_small-sc-i59f7s-1 TextColumnsWithIconsstyle__ButtonLink-sc-10zxm2u-8 heGCnB hGfEZk gnZyVr">Läs mer</a>
+                              <a href="../cyber-security/index.html" target="" class="button__btn_large-sc-i59f7s-0 button__btn_small-sc-i59f7s-1 TextColumnsWithIconsstyle__ButtonLink-sc-10zxm2u-8 heGCnB hGfEZk gnZyVr">Läs mer</a>
                            </div>
                         </div>
                      </div>
@@ -778,7 +778,7 @@
                              <div class="error-message" id="messageError"></div>
                              <p class="text__paragraph_small-sc-1xracbr-9 contactFormContentstyle__InputLabel-sc-1wvwxzl-18 ksIOdr jLQVVy">
                                <input type="checkbox" class="contactFormContentstyle__InputCheckbox-sc-1wvwxzl-19 cSaYma" name="checkbox" required />Jag godkänner villkoren i pasver:s
-                               <a href="../../privacy-cookie-policy/index.html" class="contactFormContentstyle__GdprLink-sc-1wvwxzl-20 ildqRY">personuppgiftspolicy.</a>
+                               <a href="../../../privacy-cookie-policy/index.html" class="contactFormContentstyle__GdprLink-sc-1wvwxzl-20 ildqRY">personuppgiftspolicy.</a>
                              </p>
                              <button type="button" onclick="submitForm()" class="contactFormContentstyle__SubmitButton-sc-1wvwxzl-21 gLuJmm" >Skicka</button>
                              <p id="successMessage" style="display: none; color: green; margin-top: 10px; font-weight: bold;">Tack för ditt meddelande! Vi återkommer snart.</p>
@@ -814,7 +814,7 @@
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering och integrationer</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../ui-ux-design/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">UX/UI-design</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../cyber-security/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">UX/UI-design</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
