--- a/cases/24-duty/index.html
+++ b/cases/24-duty/index.html
@@ -643,7 +643,7 @@
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk"></div>
                               </div>
                            </a>
-                           <a href="../koenigsegg/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../movie-explore/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/movie-one.png" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
@@ -651,7 +651,7 @@
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Webbshop</p>
                                     <p class="text__detail_text_mini-sc-1xracbr-13 CaseThreestyle__Label-sc-a06umc-11 diabJl cdfmzl">Design</p>
                                  </div>
-                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Ny webbshop för sportbilsjätten Koenigsegg</h5>
+                                 <h5 class="text__heading_sm-sc-1xracbr-5 CaseThreestyle__ImageHeader-sc-a06umc-3 iehGeS blmZtk">Ny webbshop för sportbilsjätten movie-explore</h5>
                               </div>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
