--- a/cases/index.html
+++ b/cases/index.html
@@ -496,7 +496,7 @@
                      <div class="wrapper__main_inner-sc-d7vgux-0 CaseGridstyle__MainInner-sc-l5243z-1 fhPlTV">
                         <div class="CaseGridstyle__CaseWrapper-sc-l5243z-5 bxUQFt">
                            <div class="CaseGridstyle__TwoCasesLeft-sc-l5243z-6 kfYzHx">
-                              <a href="koenigsegg/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="movie-explore/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/movie.png" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -504,7 +504,7 @@
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Webbshop</p>
                                        <p class="text__detail_text_mini-sc-1xracbr-13 CaseGridstyle__Label-sc-l5243z-14 diabJl ilgVbc">Design</p>
                                     </div>
-                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Ny webbshop för sportbilsjätten Koenigsegg</h5>
+                                    <h5 class="text__heading_sm-sc-1xracbr-5 CaseGridstyle__ImageHeader-sc-l5243z-3 iehGeS hhHnxU">Ny webbshop för sportbilsjätten movie-explore</h5>
                                  </div>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
