--- a/vara-tjanster/apputveckling/index.html
+++ b/vara-tjanster/apputveckling/index.html
@@ -645,7 +645,7 @@
                            Applikationer som förenklar, förbättrar eller rent av har avgörande betydelse – vi är redo för mångfalden av utmaningar inom apputveckling. Utöver att integrera de förväntade funktionerna i dagens appar (BankID, Swish, Klarna, push-notiser, med mera) har vår teknikbyråa kapacitet att lösa tekniskt mer komplexa problem. Vi står till tjänst för att underlätta kopplingen mellan olika system och automatisera deras interaktion med applikationen. Här ges en översikt över några av de varierande typer av applikationer som vi tidigare har utvecklat:
                            </p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
-                           <a href="../../cases/bonliva-care/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
+                           <a href="../../cases/hotel/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/hotel.png" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
