--- a/vara-tjanster/cyber-security/index.html
+++ b/vara-tjanster/cyber-security/index.html
@@ -759,7 +759,7 @@
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
                            <h4 class="text__heading_md-sc-1xracbr-4 TextRowsstyle__SizeH4-sc-f5buiq-9 iHfDNo CuLUy">Incidenthantering:</h4>
                            <div>
-                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vid en säkerhetsincident agerar våra specialister snabbt och effektivt för att minimera skador. Från att isolera angreppet till att analysera angreppsmetoder och implementera nödvändiga åtgärder, arbetar vi målinriktat för att återställa normal drift och säkerhet. </p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS">Vid en säkerhetsincident agerar våra specialister snabbt och effektivt för att minimera skador. Från att isolera angreppet till att analysera angreppsmetoder och implementera nödvändiga åtgärder, arbetar vi målresturantt för att återställa normal drift och säkerhet. </p>
                            </div>
                         </div>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
@@ -822,7 +822,7 @@
                         <div class="TextGridstyle__Content-sc-iefgbu-3 iMmAes">
                            <div class="TextGridstyle__Block-sc-iefgbu-4 gUiPoN">
                               <h5 class="text__heading_sm-sc-1xracbr-5 TextGridstyle__Subheader-sc-iefgbu-5 iehGeS"> Vad är skillnaden mellan IT-säkerhet och cybersäkerhet?</h5>
-                              <p class="text__paragraph_small-sc-1xracbr-9 TextGridstyle__Paragraph-sc-iefgbu-6 ksIOdr eJUhKU">IT-säkerhet är en bredare term som inkluderar hantering av all informationsteknologi, medan cybersäkerhet är inriktad på att skydda digitala system och data från hot och attacker online. Cybersäkerhet omfattar därmed en specifik aspekt av IT-säkerhet som fokuserar på den digitala sfären.</p>
+                              <p class="text__paragraph_small-sc-1xracbr-9 TextGridstyle__Paragraph-sc-iefgbu-6 ksIOdr eJUhKU">IT-säkerhet är en bredare term som inkluderar hantering av all informationsteknologi, medan cybersäkerhet är resturantd på att skydda digitala system och data från hot och attacker online. Cybersäkerhet omfattar därmed en specifik aspekt av IT-säkerhet som fokuserar på den digitala sfären.</p>
                            </div>
                            <div class="TextGridstyle__Block-sc-iefgbu-4 gUiPoN">
                               <h5 class="text__heading_sm-sc-1xracbr-5 TextGridstyle__Subheader-sc-iefgbu-5 iehGeS">Hur kan jag bäst skydda mina personliga uppgifter online?</h5>
