--- a/vara-tjanster/automatisering-integrationer/index.html
+++ b/vara-tjanster/automatisering-integrationer/index.html
@@ -595,7 +595,7 @@
                   <section id="case-three" class="background__bg_themed-sc-as3htg-0 CaseThreestyle__Background-sc-a06umc-0 eGjaET">
                      <div class="wrapper__main_inner-sc-d7vgux-0 CaseThreestyle__MainInner-sc-a06umc-1 evhckS">
                         <h2 class="text__heading_xl-sc-1xracbr-2 CaseThreestyle__Header-sc-a06umc-2 labbSw iCGwRM">Behöver du hjälp med automatisering, integration eller AI?</h2>
-                        <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Oavsett om ditt projekt fokuserar på systemutveckling, integrationer eller implementering av AI-teknologi, är vår expertis här för att hjälpa. I många projekt spelar dessa komponenter en central roll. Affärsidéer kan vara helt inriktade på genomtänkta system, medan osynliga integrationer kan ha en betydande effekt på medarbetarnas vardag.</p>
+                        <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Oavsett om ditt projekt fokuserar på systemutveckling, integrationer eller implementering av AI-teknologi, är vår expertis här för att hjälpa. I många projekt spelar dessa komponenter en central roll. Affärsidéer kan vara helt resturantde på genomtänkta system, medan osynliga integrationer kan ha en betydande effekt på medarbetarnas vardag.</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
                            <a href="../../cases/alexander-white/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
                               <img src="/Images/cofee.jpeg" alt="Alexander White" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
