--- a/cases/index.html
+++ b/cases/index.html
@@ -588,7 +588,7 @@
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ"></div>
                                  </div>
                               </a>
-                              <a href="foda-utan-radsla/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="reseplanerare/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/travel.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
@@ -611,7 +611,7 @@
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ"></div>
                                  </div>
                               </a>
-                              <a href="zelmerlow-bjorkman-foundation/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="reseapplikation/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/hotel-1.jpg" alt="" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
